--- a/app/app.json
+++ b/app/app.json
@@ -6,9 +6,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/Splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#3D3D3D"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
