--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "3.2.0",
     "react-native-sass-transformer": "^1.4.0",
     "react-native-screens": "~3.0.0",
+    "react-native-swipe-gestures": "^1.0.5",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
